[package]
name = "tos-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = { version = "1.4.3" ,features=["i128"]}
serde = { version = "1.0.160" ,features=["derive"]}
serde_json = "1.0.96"

[profile.release]
lto="thin"
strip = true