[package]
name = "tos-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = { version = "1.4.3" ,features=["i128"]}
serde = { version = "1.0.160" ,features=["derive"]}
serde_json = "1.0.96"
nom = "7.1.3"
quick-xml = { version = "0.28.2" ,features=["encoding","serialize"]}
image = { version = "0.24.6" ,features=["dds","dxt","tga","png","jpeg","bmp"]}
tobj = "3.2.5"
bevy = "0.10.1"
bevy_flycam = "0.10.1"

[profile.release]
lto="thin"
strip = true
